Added a little hack that checks for a write error in addition to the growisofs exit code. growisofs seems to sometimes exit with code 0 even if an error occured.

BUG: 104389

svn path=/trunk/extragear/multimedia/k3b/; revision=611353